--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,19 @@
+.visible {
+    transition: 1s;
+}
+.invisible {
+    visibility: hidden;
+}
+
 .keyfo-view {
-    min-height: 20vh;
+    min-height: 15vh;
 }
 
 .keyfo-keyboard.container {
     max-width: 1000px;
 }
 
-.key {
+[data-key] {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -22,34 +29,18 @@
     border-radius: 5px;
     margin: 4px;
     box-shadow: 0 2px 1px rgba(0, 0, 0, .1);
-    transition: .1s;  
+    transition: .12s;  
 }
 
-.key:hover,
-.key.active {
+[data-key]:hover,
+[data-key].active {
     /* border: 2px solid rgb(255, 236, 139); */
-    background: rgb(41, 41, 41);
+    background: rgb(48, 48, 48);
     color: rgb(255, 255, 255);
     
 }
 
-.key .top {
+[data-key] > span:first-child {
     font-size: x-small;
     color: grey;
-}
-
-[data-key~="space"] {
-     /* width: 350px; */
-}
-
-[data-key~="caps"] {
-    /* width: 100px; */
-}
-
-[data-key~="tab"] {
-    /* width: 100px; */
-}
-
-[data-key~="enter"] {
-    /* width: 150px; */
 }
